--- a/client/autoNumeric.html
+++ b/client/autoNumeric.html
@@ -1,3 +1,3 @@
 <template name="autoNumeric">
-	<input type="text" class="{{class}}" id="{{id}}" name="{{name}}" value="{{value}}"/>
+	<input type="text" class="{{class}}" id="{{id}}" name="{{name}}"/>
 </template>
